--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,6 +1,6 @@
+CONFIG_ZMK_KEYBOARD_NAME="erka's kb"
 # Boost Bluetooth TX power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
 # Enable experimental BLE settings
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
@@ -11,3 +11,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # Report peripheral battery levels
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Enable usb
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB_BOOT=y
